.gitignore script and don't ignore settings.xml

--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,5 @@ Desktop.ini
 
 .mailmap
 /apps*/
-of2030-osx/bin/data/settings.xml
-of2030-raspi/bin/data/settings.xml
 */bin/data/log.txt
+of2030-osx/scripts/*
